BalanceController With Service layer
